Fix footer spacing and update UI

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -27,3 +27,4 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
+$margin-bottom-small: 2rem;
