--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -25,7 +25,7 @@
 
             @include respond(tab-port) {
                 margin-right: 0;
-                margin-bottom: $gutter-vertical-small;
+                margin-bottom: $margin-bottom-small;
             }
         }
 
